lazylibrarian/deployment.lazylibrarian.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lazylibrarian
    environment: prod
  name: prod-lazylibrarian
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      containers:
      - name: lazylibrarian
        image: lscr.io/linuxserver/lazylibrarian:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5299
          name: http

        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi

        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
        - name: downloads
          mountPath: /downloads

      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prod-lazylibrarian-config
      - name: books
        persistentVolumeClaim:
          claimName: prod-media-books
      - name: downloads
        persistentVolumeClaim:
          claimName: prod-downloads
